# llama.go

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
.github/workflows/: build-test.yml
app/: app.go  cmds.go  log.go  run.go
cmd/modelembed/: README.md  main.go
common/: file.go
config/: config.go
core/: CMakeLists.txt  bridge.cpp  bridge.h  core.cpp  core.h  generate.cpp  generate.h  interactive.h  process.cpp  process.h
core/include/: core.h  embedding.h  process.h  runner.h
core/patches/: memory-loading.patch
core/src/: embedding.cpp  event_processor.cpp  event_processor.h  interactive.cpp  message.h  process.cpp  runner.cpp  runner.h  safe_queue.cpp  safe_queue.h
core/tests/: CMakeLists.txt  test_embedding.cpp  test_runner.cpp  test_runner_chat.cpp  test_runner_gen.cpp
grpc/: gateway.go  service.go
grpc/cmds/: generate.go  helloworld.go
grpc/proto/: generate.pb.go  generate.pb.gw.go  generate.proto  hello.pb.go  hello.proto
grpc/proto/google.golang.org/genproto/googleapis/api/annotations/: annotations.pb.go  http.pb.go
grpc/proto/google/api/: annotations.pb.go  http.pb.go
scripts/: build.sh  build_windows.ps1
server/: handlers.go  service.go  utils.go
system/: signal.go
system/limits/: limits_unix.go  limits_windows.go  unix.go
version/: version.go
wrapper/: bridge.go  bridge_cuda.go  bridge_darwin.go  bridge_linux.go  bridge_linux_cuda.go  bridge_windows.go  memory.go  mmap_darwin.go  mmap_linux.go  mmap_windows.go
